tests/snapshots/scripts_sanitized/Admin API Tool/PHP - ID 25/PHP Settings - ID 24.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get PHP Technology Configuration
#  HISTORY:
				   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/php/config" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::characterEncoding ; JSONGetElement ( $$my.result ; "response.characterEncoding" ) ]
	Feldwert setzen [ FMS__fmserver::dataPreValidation ; JSONGetElement ( $$my.result ; "response.dataPreValidation" ) ]
	Feldwert setzen [ FMS__fmserver::php_enabled ; JSONGetElement ( $$my.result ; "response.enabled" ) ]
	Feldwert setzen [ FMS__fmserver::errorMessageLanguage ; JSONGetElement ( $$my.result ; "response.errorMessageLanguage" ) ]
	Feldwert setzen [ FMS__fmserver::useFileMakerPhp ; JSONGetElement ( $$my.result ; "response.useFileMakerPhp" ) ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
